asm2/initial/src/main/mc/parser/.antlr/MCParser.py
# Generated from c:\Users\Hoang Kim\Desktop\asm2ppl\ppl191asm2\src\main\mc\parser\MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'do'", "'while'", "'if'", "'for'", "'break'", 
                     "'continue'", "'return'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'!'", "'%'", "'||'", "'&&'", "'!='", 
                     "'=='", "'<'", "'>'", "'<='", "'>='", "'='", "'int'", 
                     "'float'", "'boolean'", "'string'", "'void'", "'else'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMMENT", "ADD", "SUB", "MUL", "DIV", "NOT", "MOD", 
                      "OR", "AND", "NOT_EQUAL", "EQUAL", "LESS_THAN", "GREAT_THAN", 
                      "LESS_EQ", "GREAT_EQ", "ASSIGN", "INT_TYPE", "FLOAT_TYPE", 
                      "BOOLEAN_TYPE", "STRING_TYPE", "VOID_TYPE", "ELSE", 
                      "INTLIT", "FLOATLIT", "BOOLEANLIT", "ID", "LSB", "RSB", 
                      "LP", "RP", "LB", "RB", "SEMI", "COMA", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "STRINGLIT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_one_decl = 2
    RULE_var_decl = 3
    RULE_prim_type = 4
    RULE_id_list = 5
    RULE_func_decl = 6
    RULE_para_list = 7
    RULE_re_para = 8
    RULE_para_decl = 9
    RULE_block_state = 10
    RULE_statement = 11
    RULE_do_while_state = 12
    RULE_if_state = 13
    RULE_for_state = 14
    RULE_break_state = 15
    RULE_continue_state = 16
    RULE_return_state = 17
    RULE_exp = 18
    RULE_exp_1 = 19
    RULE_exp_2 = 20
    RULE_exp_3 = 21
    RULE_exp_4 = 22
    RULE_exp_5 = 23
    RULE_exp_6 = 24
    RULE_exp_7 = 25
    RULE_exp_8 = 26
    RULE_exp_9 = 27
    RULE_exp_0 = 28
    RULE_primid_lit = 29

    ruleNames =  [ "program", "decls", "one_decl", "var_decl", "prim_type", 
                   "id_list", "func_decl", "para_list", "re_para", "para_decl", 
                   "block_state", "statement", "do_while_state", "if_state", 
                   "for_state", "break_state", "continue_state", "return_state", 
                   "exp", "exp_1", "exp_2", "exp_3", "exp_4", "exp_5", "exp_6", 
                   "exp_7", "exp_8", "exp_9", "exp_0", "primid_lit" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    COMMENT=8
    ADD=9
    SUB=10
    MUL=11
    DIV=12
    NOT=13
    MOD=14
    OR=15
    AND=16
    NOT_EQUAL=17
    EQUAL=18
    LESS_THAN=19
    GREAT_THAN=20
    LESS_EQ=21
    GREAT_EQ=22
    ASSIGN=23
    INT_TYPE=24
    FLOAT_TYPE=25
    BOOLEAN_TYPE=26
    STRING_TYPE=27
    VOID_TYPE=28
    ELSE=29
    INTLIT=30
    FLOATLIT=31
    BOOLEANLIT=32
    ID=33
    LSB=34
    RSB=35
    LP=36
    RP=37
    LB=38
    RB=39
    SEMI=40
    COMA=41
    WS=42
    UNCLOSE_STRING=43
    ILLEGAL_ESCAPE=44
    STRINGLIT=45
    ERROR_CHAR=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MCParser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.decls()
            self.state = 61
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_decl(self):
            return self.getTypedRuleContext(MCParser.One_declContext,0)


        def decls(self):
            return self.getTypedRuleContext(MCParser.DeclsContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decls




    def decls(self):

        localctx = MCParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.one_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.one_decl()
                self.state = 65
                self.decls()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class One_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MCParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MCParser.Func_declContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_one_decl




    def one_decl(self):

        localctx = MCParser.One_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_one_decl)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(MCParser.Prim_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(MCParser.Id_listContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var_decl




    def var_decl(self):

        localctx = MCParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.prim_type()
            self.state = 74
            self.id_list()
            self.state = 75
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Prim_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(MCParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(MCParser.FLOAT_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(MCParser.BOOLEAN_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(MCParser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_prim_type




    def prim_type(self):

        localctx = MCParser.Prim_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_prim_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT_TYPE) | (1 << MCParser.FLOAT_TYPE) | (1 << MCParser.BOOLEAN_TYPE) | (1 << MCParser.STRING_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def COMA(self):
            return self.getToken(MCParser.COMA, 0)

        def id_list(self):
            return self.getTypedRuleContext(MCParser.Id_listContext,0)


        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_id_list




    def id_list(self):

        localctx = MCParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(MCParser.ID)
                self.state = 80
                self.match(MCParser.COMA)
                self.state = 81
                self.id_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(MCParser.ID)
                self.state = 83
                self.match(MCParser.LSB)
                self.state = 84
                self.match(MCParser.INTLIT)
                self.state = 85
                self.match(MCParser.RSB)
                self.state = 86
                self.match(MCParser.COMA)
                self.state = 87
                self.id_list()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(MCParser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.match(MCParser.ID)
                self.state = 90
                self.match(MCParser.LSB)
                self.state = 91
                self.match(MCParser.INTLIT)
                self.state = 92
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def para_list(self):
            return self.getTypedRuleContext(MCParser.Para_listContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_state(self):
            return self.getTypedRuleContext(MCParser.Block_stateContext,0)


        def prim_type(self):
            return self.getTypedRuleContext(MCParser.Prim_typeContext,0)


        def VOID_TYPE(self):
            return self.getToken(MCParser.VOID_TYPE, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_func_decl




    def func_decl(self):

        localctx = MCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MCParser.INT_TYPE, MCParser.FLOAT_TYPE, MCParser.BOOLEAN_TYPE, MCParser.STRING_TYPE]:
                    self.state = 95
                    self.prim_type()
                    pass
                elif token in [MCParser.VOID_TYPE]:
                    self.state = 96
                    self.match(MCParser.VOID_TYPE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 99
                self.match(MCParser.ID)
                self.state = 100
                self.match(MCParser.LB)
                self.state = 101
                self.para_list()
                self.state = 102
                self.match(MCParser.RB)
                self.state = 103
                self.block_state()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.prim_type()
                self.state = 106
                self.match(MCParser.LSB)
                self.state = 107
                self.match(MCParser.RSB)
                self.state = 108
                self.match(MCParser.ID)
                self.state = 109
                self.match(MCParser.LB)
                self.state = 110
                self.para_list()
                self.state = 111
                self.match(MCParser.RB)
                self.state = 112
                self.block_state()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_decl(self):
            return self.getTypedRuleContext(MCParser.Para_declContext,0)


        def re_para(self):
            return self.getTypedRuleContext(MCParser.Re_paraContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_para_list




    def para_list(self):

        localctx = MCParser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT_TYPE) | (1 << MCParser.FLOAT_TYPE) | (1 << MCParser.BOOLEAN_TYPE) | (1 << MCParser.STRING_TYPE))) != 0):
                self.state = 116
                self.para_decl()
                self.state = 117
                self.re_para()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Re_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(MCParser.COMA, 0)

        def para_decl(self):
            return self.getTypedRuleContext(MCParser.Para_declContext,0)


        def re_para(self):
            return self.getTypedRuleContext(MCParser.Re_paraContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_re_para




    def re_para(self):

        localctx = MCParser.Re_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_re_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.COMA:
                self.state = 121
                self.match(MCParser.COMA)
                self.state = 122
                self.para_decl()
                self.state = 123
                self.re_para()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(MCParser.Prim_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para_decl




    def para_decl(self):

        localctx = MCParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.prim_type()
            self.state = 128
            self.match(MCParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LSB:
                self.state = 129
                self.match(MCParser.LSB)
                self.state = 130
                self.match(MCParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Block_stateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCParser.StatementContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_block_state




    def block_state(self):

        localctx = MCParser.Block_stateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block_state)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(MCParser.LP)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.T__0) | (1 << MCParser.T__2) | (1 << MCParser.T__3) | (1 << MCParser.T__4) | (1 << MCParser.T__5) | (1 << MCParser.T__6) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.INT_TYPE) | (1 << MCParser.FLOAT_TYPE) | (1 << MCParser.BOOLEAN_TYPE) | (1 << MCParser.STRING_TYPE) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.ID) | (1 << MCParser.LP) | (1 << MCParser.LB) | (1 << MCParser.STRINGLIT))) != 0):
                self.state = 134
                self.statement()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MCParser.Var_declContext,0)


        def do_while_state(self):
            return self.getTypedRuleContext(MCParser.Do_while_stateContext,0)


        def if_state(self):
            return self.getTypedRuleContext(MCParser.If_stateContext,0)


        def for_state(self):
            return self.getTypedRuleContext(MCParser.For_stateContext,0)


        def break_state(self):
            return self.getTypedRuleContext(MCParser.Break_stateContext,0)


        def continue_state(self):
            return self.getTypedRuleContext(MCParser.Continue_stateContext,0)


        def return_state(self):
            return self.getTypedRuleContext(MCParser.Return_stateContext,0)


        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def block_state(self):
            return self.getTypedRuleContext(MCParser.Block_stateContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_statement




    def statement(self):

        localctx = MCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.INT_TYPE, MCParser.FLOAT_TYPE, MCParser.BOOLEAN_TYPE, MCParser.STRING_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.var_decl()
                pass
            elif token in [MCParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.do_while_state()
                pass
            elif token in [MCParser.T__2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.if_state()
                pass
            elif token in [MCParser.T__3]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.for_state()
                pass
            elif token in [MCParser.T__4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.break_state()
                pass
            elif token in [MCParser.T__5]:
                self.enterOuterAlt(localctx, 6)
                self.state = 147
                self.continue_state()
                pass
            elif token in [MCParser.T__6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 148
                self.return_state()
                pass
            elif token in [MCParser.SUB, MCParser.NOT, MCParser.INTLIT, MCParser.FLOATLIT, MCParser.BOOLEANLIT, MCParser.ID, MCParser.LB, MCParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 8)
                self.state = 149
                self.exp()
                self.state = 150
                self.match(MCParser.SEMI)
                pass
            elif token in [MCParser.LP]:
                self.enterOuterAlt(localctx, 9)
                self.state = 152
                self.block_state()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Do_while_stateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCParser.StatementContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_do_while_state




    def do_while_state(self):

        localctx = MCParser.Do_while_stateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_do_while_state)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(MCParser.T__0)
            self.state = 157 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 156
                self.statement()
                self.state = 159 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.T__0) | (1 << MCParser.T__2) | (1 << MCParser.T__3) | (1 << MCParser.T__4) | (1 << MCParser.T__5) | (1 << MCParser.T__6) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.INT_TYPE) | (1 << MCParser.FLOAT_TYPE) | (1 << MCParser.BOOLEAN_TYPE) | (1 << MCParser.STRING_TYPE) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.ID) | (1 << MCParser.LP) | (1 << MCParser.LB) | (1 << MCParser.STRINGLIT))) != 0)):
                    break

            self.state = 161
            self.match(MCParser.T__1)
            self.state = 162
            self.exp()
            self.state = 163
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_stateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MCParser.ELSE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_if_state




    def if_state(self):

        localctx = MCParser.If_stateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_if_state)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MCParser.T__2)
            self.state = 166
            self.match(MCParser.LB)
            self.state = 167
            self.exp()
            self.state = 168
            self.match(MCParser.RB)
            self.state = 169
            self.statement()
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 170
                self.match(MCParser.ELSE)
                self.state = 171
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class For_stateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
